--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,1 +1,42 @@
+.app {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+	background-color: #f0f4f8;
+}
+
+.to-do-list-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 70%;
+	height: auto;
+	background-color: #ffffff;
+	border-radius: 10px;
+	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+	padding: 20px;
+	text-align: center;
+	margin: 15px 0;
+}
+
+.to-do-list-container h1 {
+	color: #333;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-size: 62px;
+}
+
+.to-do-list-container input {
+	width: 100%;
+	height: 50px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 0 10px;
+	margin-bottom: 20px;
+	font-size: 16px;
+}
+
 
