--- a/src/components/todos/todolist.module.css
+++ b/src/components/todos/todolist.module.css
@@ -4,7 +4,7 @@
 	height: 300px;
 	overflow-y: scroll;
 	display: flex;
-	justify-content: center;
+	justify-content: start;
 	align-items: center;
 	flex-direction: column;
 }
@@ -21,6 +21,7 @@
 	display: flex;
 	justify-content: start;
 	align-items: center;
+	flex-direction: row;
 	color: #00322c;
 	font-weight: bold;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
