--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 .app {
 	display: flex;
 	justify-content: center;
@@ -13,7 +17,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	width: 70%;
+	width: 90%;
 	height: auto;
 	background-color: #ffffff;
 	border-radius: 10px;
@@ -27,14 +31,4 @@
 	color: #333;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 	font-size: 62px;
-}
-
-.to-do-list-container input {
-	width: 100%;
-	height: 50px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	padding: 0 10px;
-	margin-bottom: 20px;
-	font-size: 16px;
 }
