--- a/src/components/todos/todolist.module.css
+++ b/src/components/todos/todolist.module.css
@@ -16,7 +16,7 @@
 .todo {
 	background-color: #f3feff;
 	width: 90%;
-	height: 40%;
+	height: 50px;
 	border-radius: 5px;
 	display: flex;
 	justify-content: space-between;
